# resume_analyzer_project

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
apps/resume-ai-api/: .env.example  Dockerfile  pyproject.toml
apps/resume-ai-api/src/resume_ai_api/: __init__.py  analyzer.py  cache.py  chatbot.py  main.py  metrics.py  schemas.py  settings.py
apps/resume-ai-api/tests/: test_main.py
apps/resume-ai-web/: app.js  index.html  styles.css
infra/monitoring/grafana/dashboards/: resume-ai-api.json
infra/monitoring/grafana/provisioning/dashboards/: dashboards.yml
infra/monitoring/prometheus/: prometheus.yml
infra/nginx/: default.conf
infra/terraform/eks/: main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
platform/gitops/argocd/: project.yaml  resume-ai-prod.yaml  resume-ai-staging.yaml
platform/helm/resume-ai/: Chart.yaml  values-prod.yaml  values-staging.yaml  values.yaml
platform/helm/resume-ai/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  namespace.yaml  redis.yaml  web-configmap.yaml  web-deployment.yaml  web-service.yaml
scripts/: capture-local-screenshot.js  get-argocd-password.ps1  render-gitops-placeholders.ps1
