[project]
name = "resume-ai-api"
version = "1.0.0"
description = "FastAPI AI Resume Analyzer and chatbot backend."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "prometheus-client>=0.20.0",
  "pydantic-settings>=2.3.0",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

